  * checks/shared-libs:
    + [NT] Reverse order of two subst expressions to prevent
      dev-pkg-without-shlib-symlink false positives.  Thanks to
      Aurelien Jarno and Stephen M. Webb for the report and the
      patch.  (Closes: #675826, #675832)

  * debian/changelog:
    + [NT] raster-image-in-scalable-directory was added in 2.5.7,
      not removed.

  * lib/Lintian/Package/Source.pm:
    + [NT] sorted_index now returns a list rather than a list ref.

 -- Niels Thykier <niels@thykier.net>  Tue, 29 May 2012 13:19:07 +0200

lintian (2.5.8) unstable; urgency=low

  Its like 2.5.7, only with less false positives and no FTBFS.

  * checks/binaries{,.desc}:
    + [NT] Fix a too strict regex causing false-positives for
      biarch packages.  This was a regression introduced in
      version 2.5.7.  Thanks to Sven Joachim for reporting it.
      (Closes: #673106)
    + [NT] Demote certainty of hardening-no-stackprotector to
      wild-guess and move it to debian/extra-hardening profile.
    + [NT] Skip hardening-no-fortify-functions for binaries only
      using the unprotected memcpy.  This greatly reduces the
      number of false positives for binaries compiled with
      gcc-4.7 -O2 (or higher optimization).  (Closes: #673112)
  * checks/files:
    + [NT] Properly handle symlinks in icon directories.  Thanks
      to Nicholas Breen for the report and Felix Geyer for the
      patches.  (Closes: #673352)
    + [NT] Ignore wrong sizes on images in animations as it may
      be a method to implement the animation.  Thanks to Matthias
      Klumpp for the report and Felix Geyer for the patch.
      (Closes: #673862)
    + [NT] Ignore wrong icon sizes if the size difference is at
      most 2px.  Thanks to Felix Geyer for the patch.
  * checks/scripts:
    + [NT] Refactor the %versioned_interpreters into a new
      data file.
  * checks/shared-libs:
    + [NT] Fix false positive "dev-pkg-without-shlib-symlink"